Close to finish

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "inverted_search.h": "c",
-        "filenames.h": "c"
+        "filenames.h": "c",
+        "stdlib.h": "c",
+        "algorithm": "c"
     }
 }
